# llm_parse_pdf

./: .gitignore  README.md  aggregator.py  batch_tracker.py  extract_obituaries.py  google_drive.py  group_and_count.py  hello.py  main.py  main.tf  process_with_genai.py  prompts.txt  pyproject.toml  reduce_file_size.sh  system_prompt.txt  test.py  variables.tf
