[project]
name = "clean-dwarkesh-stripe-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-genai>=1.8.0",
    "google-generativeai>=0.8.4",
    "google>=3.0.0",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.0.10",
    "loguru>=0.7.3",
    "pypdf2>=3.0.1",
    "pypdf>=5.4.0",
]
